k8s/apps/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: understand-the-wire
spec:
  replicas: 0
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: sa
      volumes:
        - name: aws-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  audience: sts.amazonaws.com
                  expirationDate: 3600
      containers:
      - name: server
        image: ghcr.io/alonkopilov/understand-the-wire-server-prod:20260826-140242 # {"$imagepolicy": "flux-system:server-imagepolicy"}
        volumeMounts:
          - name: aws-token
            mountPath: /var/run/secrets/aws/token
            readOnly: true
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 40m
