k8s/apps/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: understand-the-wire
spec:
  selector:
    app: server
  ports:
  - port: 8000
    targetPort: 8000
