k8s/apps/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: understand-the-wire
  labels:
    app.kubernetes.io/name: ingress
spec:
  ingressClassName: traefik
  rules:
  - host: origin.${domain}
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: service
            port: 
              number: 8000
